<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/bottom_nav_map"
        android:enabled="true"
        android:icon="@drawable/ic_menu_map"
        android:title="@string/map"
        android:checked="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_species"
        android:enabled="true"
        android:icon="@drawable/ic_menu_species"
        android:title="@string/species"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_settings"
        android:enabled="true"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>